syntax = "proto3";

package login;
option go_package = "github.com/xd-Abi/moxie-go/pkg/proto/login";

service LoginService {
    rpc Login(LoginRequest) returns (LoginResponse) {}
}

message LoginRequest {
    string email = 2;
    string password = 3;
}

message LoginResponse {
    string access_token = 1;
}
